# INVESTING

./: .gitignore  README.md  db.sqlite3  main.py  pyproject.toml
TRADING/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
TRADING/migrations/: 0001_initial.py
TRADING/templates/TRADING/: index.html
configuracion/: asgi.py  settings.py  urls.py  wsgi.py
